# cosmic_hex

./: Cargo.toml  justfile
i18n/en/: cosmic_hex.ftl
src/: config.rs  i18n.rs  main.rs
src/app/: key_binds.rs  menu_bar.rs  mod.rs  tab.rs
src/hex_view/: buffer.rs  hexviewwidget.rs  mod.rs  theme.rs  undo.rs
